Correção de erros de escrita Corrigi uns arquivos das primeiras aulas com umas explicações ruins ou erros

--- a/Semana 1 [10 a 12-08]/AULA 1 - Olá Mundo - HTML/first.html
+++ b/Semana 1 [10 a 12-08]/AULA 1 - Olá Mundo - HTML/first.html
@@ -5,7 +5,7 @@
     <head> <!--Aqui vai o cabeçalho e dá pra colocar coisas dentro, tipo:-->
 
         <meta charset="UTF-8"> 
-        <!-- Uma tag 'meta' com atributo 'charset' e valor 'UTF-8'
+        <!-- Uma tag de 'meta'dados com atributo 'charset' e valor 'UTF-8'
         Aqui é a configuração da fonte, para exibir os caracteres com acento corretamente.-->
 
         <title>
@@ -13,7 +13,7 @@
         </title>
         
     </head> <!-- Toda 'tag' que você abre precisa ser fechada, do jeito que tá ai.
-            Felizmente esse programa é de preguiçoso então só de escrever o nome da tag ele já faz a abertura e fechamento sozinho. -->
+            Felizmente o VScode é programa de preguiçoso então só de escrever o nome da tag ele já faz a abertura e fechamento sozinho. -->
 
     <body bgcolor="green"> 
         <!--Tag 'body' com atributo 'bgcolor' que cria uma cor de fundo com valor 'green'.
