--- a/Semana 1 [10 a 12-08]/AULA 2 - Tags/Explicação de Tags.html
+++ b/Semana 1 [10 a 12-08]/AULA 2 - Tags/Explicação de Tags.html
@@ -37,7 +37,7 @@
     <u>Tag {u} é sublinhado (underline) <br></u>
 
     Tag {br}: Cria texto com quebra <br>
-    de página.
+    de página (break).
 
     <p>Tag {p}: Cria um parágrafo </p>
 
