--- a/Semana 1 [10 a 12-08]/AULA 2 - Tags/Links.html
+++ b/Semana 1 [10 a 12-08]/AULA 2 - Tags/Links.html
@@ -19,7 +19,7 @@
        title="Latim">
         Link para o site da Wikipedia sobre Latim
         <!--Atributos da tag (a): 
-        "href" é hyperlink reference, 
+        "href" é "hyperlink reference", 
         "name" é o nome para o link,
         "title" é ,obviamente, o título, e ele aparece quando você passa o mouse-->
     </a>
