--- a/Semana 1 [10 a 12-08]/AULA 2 - Tags/página 1.html
+++ b/Semana 1 [10 a 12-08]/AULA 2 - Tags/página 1.html
@@ -7,9 +7,7 @@
     <meta charset="UTF-8"> <!--Meta vem de metadados-->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-        <!--viewport fala da escala. aqui está se definindo a largura para a largura
-            do dispositivo. Manter padrão deixa o site "responsivo", que se adapta ao espaço
-            disponível.-->
+        <!--viewport fala da escala. aqui está se definindo a largura da página para a largura do dispositivo. Manter padrão deixa o site "responsivo", que se adapta ao espaço disponível.-->
     <meta name="author" content="Alisson Fernandes">
     <meta name="copyright" content="NONE"> 
     <meta name="keywords" content="SENAI, Site com metadados">
@@ -24,8 +22,8 @@
     Isso é um texto no estilo H1 dentro da tag {body}
     </h1>
 
-    A sintaxe das tags é: {TAG} atributo = "valor do atributo" TEXTO IMPRESSO {/TAG} <br>
-    <!--A tag BR é break, quebra linha.-->
+    A sintaxe das tags é: {TAG atributo = "valor do atributo"} TEXTO VISÍVEL {/TAG} <br>
+    <!--A tag BR é de 'break', quebra linha.-->
 
     <a href="http://duckduckgo.com">
     Isso é um hyperlink usando a tag (a) ou âncora.
