--- a/Semana 1 [10 a 12-08]/AULA 2 - Tags/Listas.html
+++ b/Semana 1 [10 a 12-08]/AULA 2 - Tags/Listas.html
@@ -14,10 +14,10 @@
     <b>Lista de Definição</b><br> 
     <i>A explicação do que cada coisa é está no código.</i><br><br>
 
-    <p>> Essa é a <b>lista de definição</b>. Ela vem com uma tag de título:<
-    <dl> <!--tag da lista de definição-->
+    <p>> Essa é a <b>lista de definição</b>. Ela vem com uma tag de título:
+    <dl>                                   <!--tag da lista de definição-->
         <dt>Termo (título) da Lista 1</dt> <!--Definição do termo, o título da lista-->
-            <dd>Maçã</dd> <!--Item do termo-->
+            <dd>Maçã</dd>                  <!--Item do termo-->
             <dd>Banana</dd>
         <dt>Termo (título) da Lista 2</dt>
             <dd>Excel</dd>
@@ -25,25 +25,25 @@
     </dl>
 
     <p>> Também tem a <b>lista não-ordenada:</b></p>
-        <ul> <!--Tag da lista, marca início e fim-->
-            <li>Item vermelho</li> <!--Itens da lista-->
+        <ul>                        <!--Tag da lista, marca início e fim-->
+            <li>Item vermelho</li>  <!--Itens da lista-->
             <li>Item azul</li>
             <li>Item amarelo</li>
         </ul>
     
     <p>> E por fim a <b>lista ordenada:</b></p>
-        <ol><!--Tag da lista-->
+        <ol>                        <!--Tag da lista-->
             <li>Primeiro item</li>
             <li>Segundo item</li>
             <li>Terceiro item</li>
         </ol>
 
     <p>> Dá para fazer uma <b>lista mista</b>, com vários tipos, uma dentro da outra:</p>
-    <dl> <!--Começa com a lista de definição, para que ela tenha título-->
-    <dt>Sudeste</dt> <!--Esse é o título-->
-        <ol> <!--E passa para uma lista ordenada, para poder ter a numeração-->
+    <dl>                    <!--Começa com a lista de definição, para que ela tenha título-->
+    <dt>Sudeste</dt>        <!--Esse é o título-->
+        <ol>                <!--E passa para uma lista ordenada, para poder ter a numeração-->
         <li>São Paulo</li>
-            <ul> <!--Aqui entra uma lista não ordenada.-->
+            <ul>            <!--Aqui entra uma lista não ordenada.-->
             <li>Osasco</li>
             <li>Santos</li>
             </ul>
