--- a/Semana 1 [10 a 12-08]/AULA 3 - Tags semânticas e tabelas/Tabelas (aka escrevendo um Excel).html
+++ b/Semana 1 [10 a 12-08]/AULA 3 - Tags semânticas e tabelas/Tabelas (aka escrevendo um Excel).html
@@ -24,12 +24,12 @@
 
     <table border="1"> <!--Atributo para definir uma borda-->
         <tr> <!--Linha 1 da tabela-->
-            <td>&nbsp;</td> <!--&nbsp; "E no-break space?", cria um espaço em branco-->
-            <td>Célula 1</td> <!--<td> Cria uma célula padrão, <th> serve como título-->
+            <td>&nbsp;</td>     <!--&nbsp; "E no-break space?", cria um espaço em branco-->
+            <td>Célula 1</td>   <!--<td> Cria uma célula padrão, <th> serve como título-->
             <td>Célula 2</td>
         </tr>
         <tr> <!--Linha 2 da tabela-->
-            <th>Linha 1</th>
+            <th>Linha 1</th>    <!--'Table header' - Cria um cabeçalho (em negrito)-->
             <td>Célula A</td>
             <td>Célula B</td>
         </tr>
