--- a/Semana 1 [10 a 12-08]/AULA 3 - Tags semânticas e tabelas/Tags semânticas.html
+++ b/Semana 1 [10 a 12-08]/AULA 3 - Tags semânticas e tabelas/Tags semânticas.html
@@ -10,8 +10,7 @@
 <body>
     <h1>Tags Semânticas</h1>
     <i>Além de criarem estrutura, dão função ao html.</i>
-    Elas separam os elementos em grupos, para que você possa criar, elaborar e customizar 
-    cada parte de uma vez só ao invés de fazer uma a uma.
+    Elas separam os elementos em grupos, para que você possa criar, elaborar e customizar cada parte de uma vez só ao invés de fazer uma a uma.
 
     <!--A tag header serve para criar um cabeçalho no corpo do html-->
     <h3>Grupo Header</h3>
@@ -20,8 +19,7 @@
         <a href="http://www.youtube.com">Youtube</a>
     </header>
 
-    <!--A tag section define seções do documento! Cria-se partes separadas
-    na página. E pressupõe um título.-->
+    <!--A tag section define seções do documento! Cria-se partes separadas na página. E pressupõe um título.-->
     <section> <!--Seção 1-->
         <h3>Seção Aulas</h3>
         <p>Aula de HTML</p>
@@ -32,7 +30,7 @@
         <p>Quinta feira</p>
     </section>
 
-    <!--A tag <artcle> insere um artigo. Mas de qual tipo? (Pressupõe título)-->
+    <!--A tag <article> insere um artigo. Mas de qual tipo? (Pressupõe título)-->
     <article>
         <h3>Artigo</h3>
         <p>Isso é um artigo. É igual visualmente, mas pode ser usado para criar um
